css/style.css
.loader {
  background-color: #fcfcfc;
  display: flex;
  width: 100vw;
  height: 100vh;
  justify-content: center;
  align-content: center;
  position: fixed;
  z-index: 1000;
}

.navbar {
  background-color: #FCFCFC;
  padding: 0.8rem 1.6rem;
}
.navbar-brand {
  display: inline-flex;
  text-transform: uppercase;
  align-items: center;
}
.navbar-brand img {
  height: 6rem;
}
.navbar-brand .logolabel {
  display: inline-block;
  color: #1455c5;
}
.navbar-nav {
  padding: 1.5rem 0 0;
}
.navbar-nav li {
  padding: 1rem 0 1rem;
  text-align: center;
}
.navbar-nav li.active {
  background-color: #e9ecf1;
}
.navbar-nav li.active a {
  font-weight: 600;
  color: #1455c5;
}
.navbar-nav li.active a:hover {
  color: #0a41a1;
}
.navbar-nav li:hover a {
  color: #0a41a1;
}
.navbar-nav .sep {
  border-top: 1px solid rgba(20, 85, 197, 0.3);
}
@media only screen and (min-width: 768px) {
  .navbar {
    padding: 0.4rem 1.6rem;
  }
  .navbar #navbarSupportedContent {
    justify-content: flex-end;
  }
  .navbar-nav {
    padding-top: 0px;
  }
  .navbar-nav li {
    padding: 0.2rem 0.5rem;
    align-self: center;
  }
  .navbar-nav li.active {
    background-color: #fcfcfc;
  }
  .navbar-nav li.active a {
    color: #1455c5;
  }
  .navbar-nav .sep {
    border-top: none;
  }
}

.header {
  background-image: linear-gradient(to right, rgba(48, 48, 48, 0.3), rgba(48, 48, 48, 0.3)), url("../img/headerbg1-mob.jpg");
  background-position: center;
  min-height: 40rem;
  background-size: cover;
  padding: 9.6rem 3rem 9.6rem;
  z-index: 50;
  position: relative;
}
.header .ctas {
  width: 80%;
  margin: 3.2rem auto 0rem;
}
@media only screen and (min-width: 540px) {
  .header {
    padding: 14.8rem 3rem 14.8rem;
    min-height: 50rem;
  }
  .header .ctas {
    display: flex;
    justify-content: space-around;
    width: 40rem;
  }
}
@media only screen and (min-width: 645px) {
  .header {
    background-image: linear-gradient(to right, rgba(48, 48, 48, 0.3), rgba(48, 48, 48, 0.3)), url("../img/headerbg1.jpg");
    padding: 14rem 3rem 24rem;
  }
  .header .ctas {
    width: 44rem;
  }
}

.navbar-toggler {
  padding: 5px;
}
.navbar-toggler-icon {
  margin: auto;
  width: 3.5rem;
  height: 2.7rem;
}
.navbar-toggler-icon img {
  width: 100%;
}

.navbar-nav .nav-item .btn.primary {
  background-color: #1455c5;
  color: #fcfcfc;
  display: block;
  font-size: 1.6rem;
  padding: 1.2rem;
  font-weight: 500;
  font-size: 1.6rem;
}
@media only screen and (min-width: 540px) {
  .navbar-nav .nav-item .btn.primary {
    padding: 1.2rem 2.4rem;
    display: inline-block;
  }
}
@media only screen and (min-width: 768px) {
  .navbar-nav .nav-item .btn.primary {
    padding: 1.2rem 3.2rem;
    display: inline-block;
  }
}
.navbar-nav .nav-item .btn.primary:hover {
  background-color: #0a41a1;
}
@media only screen and (min-width: 768px) {
  .navbar-nav .nav-item .btn.primary {
    padding: 1.2rem 2.4rem;
  }
}

.ctas > * {
  display: block;
  font-size: 1.6rem;
}
.ctas .primary {
  display: block;
  font-size: 1.6rem;
  padding: 1.2rem;
  font-weight: 500;
  background-color: #1455c5;
  color: #fcfcfc;
}
@media only screen and (min-width: 540px) {
  .ctas .primary {
    padding: 1.2rem 2.4rem;
    display: inline-block;
  }
}
@media only screen and (min-width: 768px) {
  .ctas .primary {
    padding: 1.2rem 3.2rem;
    display: inline-block;
  }
}
.ctas .primary:hover {
  background-color: #0a41a1;
}
.ctas .secondary {
  display: block;
  font-size: 1.6rem;
  padding: 1.2rem;
  font-weight: 500;
  background-color: #fcfcfc;
  color: #1455c5;
  margin-top: 2rem;
}
@media only screen and (min-width: 540px) {
  .ctas .secondary {
    padding: 1.2rem 2.4rem;
    display: inline-block;
  }
}
@media only screen and (min-width: 768px) {
  .ctas .secondary {
    padding: 1.2rem 3.2rem;
    display: inline-block;
  }
}
.ctas .secondary:hover {
  background-color: #e9ecf1;
}
@media only screen and (min-width: 540px) {
  .ctas .secondary {
    margin-top: 0;
  }
  .ctas .secondary:hover {
    background-color: #e9ecf1;
  }
}

footer {
  background-color: #041C47;
  padding: 8.8rem 6.4rem 6.4rem;
}
footer > *:not(:first-child) {
  margin-top: 4.8rem;
}
footer .social ul {
  margin-top: 1.5rem;
}
footer .social ul li {
  display: inline-block;
}
footer .social ul li:not(:first-child) {
  margin-left: 1.5rem;
}

html {
  font-size: 10px;
  scroll-behavior: smooth;
}

body {
  font-size: 1.6rem;
  font-family: "Raleway";
  color: #454545;
}

h1 {
  font-family: "Montserrat", "Segoe UI";
  color: #454545;
  font-size: 3.2rem;
}
@media only screen and (min-width: 768px) {
  h1 {
    font-size: 3.6rem;
  }
}

.navbar-brand {
  font-family: "Montserrat";
  font-size: 1.6rem;
  font-weight: 700;
}
.navbar-nav li a {
  color: #303030;
}

.header .content {
  color: #fcfcfc;
  text-align: center;
}
.header .content .main {
  font-family: "Montserrat";
  font-weight: 900;
  font-size: 4rem;
  line-height: 110%;
  position: relative;
  text-transform: uppercase;
  margin-bottom: 1.6rem;
  color: #fcfcfc;
}
.header .content .aside {
  font-family: "Raleway";
  font-size: 1.6rem;
  margin-bottom: 6.4rem;
}
@media only screen and (min-width: 768px) {
  .header .content .main {
    font-size: 4.8rem;
    line-height: 100%;
  }
}

/******************************/
/*******Welcome****************/
/******************************/
.welcome__section-container h2 {
  font-weight: 700;
  font-family: "Montserrat";
  text-align: center;
  font-size: 3.2rem;
}
.welcome__section-container h2::after {
  content: "";
  height: 2px;
  width: 6.4rem;
  background-color: #1455c5;
  display: block;
  margin: 0.8rem auto 2.4rem;
}
.welcome__section-container .content--text {
  line-height: 2.8rem;
  font-size: 1.6rem;
  font-weight: 400;
  letter-spacing: 0.3px;
  padding: 0 1.6rem;
}
.welcome__section-container .content--text .attention {
  font-weight: 600;
}

.with-us .content h2 {
  font-weight: 700;
  font-family: "Montserrat";
  font-size: 3.2rem;
}
@media only screen and (min-width: 768px) {
  .with-us .content h2 {
    font-size: 3.6rem;
  }
}
.with-us .content h2::after {
  content: "";
  height: 2px;
  width: 6.4rem;
  background-color: #1455c5;
  display: block;
  margin: 0.8rem 0 2.4rem;
}
.with-us .content .info p {
  margin: 0;
  line-height: 145%;
}
.with-us .content .info .at {
  font-weight: 500;
  color: #1455c5;
}
.with-us .content .info .at .label {
  font-weight: 700;
}
.with-us .content .info .weekday {
  font-weight: 600;
  margin: 0;
}
.with-us .content .info .name {
  font-style: italic;
  margin-top: 0.5rem;
}

/******************************/
/*******Welcome****************/
/******************************/
footer > * {
  color: #fcfcfc;
}
footer > * h2 {
  font-weight: 600;
}
footer > * h2::after {
  content: "";
  height: 2px;
  width: 6.4rem;
  background-color: #1455c5;
  display: block;
  width: 3.2rem;
  background-color: #fcfcfc;
  margin: 0.5rem 0 0.8rem;
}
footer > * ul {
  list-style: none;
  padding: 0;
}
footer > * ul li a {
  color: #fcfcfc;
}

.limit {
  width: 95%;
  margin: 0 auto;
}
@media only screen and (min-width: 768px) {
  .limit {
    width: 90%;
    margin: 0 auto;
  }
}
@media only screen and (min-width: 992px) {
  .limit {
    width: 90rem;
    margin: 0 auto;
  }
}

.welcome__section {
  background-color: #e9ecf1;
}
.welcome__section-container {
  padding: 8.8rem 3.2rem 5.6rem;
  margin: 0 auto;
  background-color: #f6f7fa;
  display: grid;
  grid-template-rows: repeat(3, auto);
}
.welcome__section-container .content--pic {
  grid-row: 2/span 1;
  margin-bottom: 3.2rem;
  border-radius: 5px;
  display: flex;
  justify-content: center;
}
.welcome__section-container .content--pic img {
  width: 100%;
}
@media only screen and (min-width: 645px) {
  .welcome__section {
    padding-bottom: 8.8rem;
  }
  .welcome__section-container {
    padding: 5.4rem 4.8rem 4rem;
    width: 80%;
    margin: -16rem auto 0;
    box-shadow: 0 1.2rem 4rem rgba(48, 48, 48, 0.25);
    grid-template-columns: repeat(3, 1fr);
    border-radius: 5px;
    z-index: 100;
    position: relative;
  }
  .welcome__section-container h2 {
    grid-column: span 3;
  }
  .welcome__section-container .content--text {
    padding-left: 2.4rem;
    grid-column: 2/span 2;
  }
  .welcome__section-container .content--pic {
    grid-row: 2/span 1;
    grid-column: 1/span 1;
    margin-top: 8px;
    margin-bottom: 0;
    overflow: hidden;
    max-height: 28rem;
  }
  .welcome__section-container .content--pic img {
    height: 100%;
    width: auto;
    margin: 0 auto;
  }
}
@media only screen and (min-width: 992px) {
  .welcome__section-container {
    padding: 5.6rem 6.4rem 4rem;
    width: 74.8rem;
    margin: -16rem auto 0;
    box-shadow: 0 1.2rem 4rem rgba(48, 48, 48, 0.25);
    border-radius: 5px;
  }
  .welcome__section-container .content--text {
    display: flex;
    align-self: flex-start;
  }
  .welcome__section-container .content--text p {
    margin-bottom: 0;
  }
  .welcome__section-container .content--pic {
    grid-row: 2/span 1;
    margin-bottom: 3.2rem;
  }
  .welcome__section-container .content--pic img {
    width: 100%;
    margin: 0 auto;
  }
}

/******************************/
/************With Us***********/
/******************************/
.with-us {
  position: relative;
  display: grid;
  grid-template-columns: 3.6rem auto;
}
.with-us .pictwo {
  background-image: linear-gradient(to right, rgba(20, 85, 197, 0.65), rgba(20, 85, 197, 0.65)), url("../img/worship.png");
  height: 100%;
  grid-column: 1/span 1;
  background-size: cover;
  background-position: center;
}
.with-us .content {
  padding: 8.8rem 3.2rem 6.4rem;
}
.with-us .content .info .at {
  margin-top: 2rem;
}
.with-us .content .info .at p {
  margin-bottom: 0.7rem;
}
.with-us .content .info .at p img {
  width: 2.5rem;
  margin-right: 0.8rem;
}
.with-us .content .info .at p .label {
  margin-left: 0.3rem;
}
.with-us .content .info .schedule {
  background-color: #f6f7fa;
  margin-top: 2rem;
  padding: 3rem;
}
.with-us .content .info .schedule .day:not(:last-child) {
  margin-bottom: 2rem;
}
.with-us .content .info .schedule .day .time img {
  width: 2rem;
  margin-right: 0.5rem;
}

/*# sourceMappingURL=style.css.map */

